--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -20,19 +20,19 @@
 
 @keyframes slide-on {
     from {
-        transform: translateX(0px);
+      width: 0px;
     }
     to {
-        transform: translateX(-60px);
+      width: 60px;
     }
 }
 
 @keyframes slide-off {
     from {
-        transform: translateX(-60px);
+      width: 60px;
     }
     to {
-        transform: translateX(0px);
+      width: 0px;
     }
 }
 
@@ -56,20 +56,3 @@
         opacity: 1;
     }
 }
-
-@keyframes slide-on-2 {
-    from {
-      width: 0px;
-    }
-    to {
-      width: 60px;
-    }
-  }
-  @keyframes slide-off-2 {
-    from {
-      width: 60px;
-    }
-    to {
-      width: 0px;
-    }
-  }
