--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -90,38 +90,27 @@ opacity: 1;
     }
 }
 
-
-.dishes {
-.dish {
-    &:nth-child(1){
-        animation: appearance 1s 2700ms forwards;
-      }
-      &:nth-child(2){
-        animation: appearance 1s 2900ms forwards;
-      }
-      &:nth-child(3){
-        animation: appearance 1s 3100ms forwards;
-      }
-      &:nth-child(4){
-        animation: appearance 1s 3300ms forwards;
-      }
-}
-}
-
 .dish {
 display: flex;
-flex-direction: column;
-justify-content: space-around;
+justify-content: space-between;
 height: 68px;
 background-color: $white-color;
 border-radius: 15px;
 margin-bottom: 15px;
-padding: 12px 22px 12px 12px;
 box-shadow: 0 10px 10px  #ebebeb;
 position: relative;
 overflow: hidden;
 width: 100%;
 opacity: 0;
+
+    &__title {
+        width: 100%;
+        min-width: 0;
+        display: flex;
+        padding: 12px 22px 12px 12px;
+        flex-direction: column;
+        justify-content: space-between;
+        }
 
     &__description {
         display: flex;
@@ -129,36 +118,34 @@ opacity: 0;
         width: 100%;
     }
 
-    p {
-        font-size: 1.4rem;
+    .comment {
+        white-space: nowrap; 
+        overflow: hidden;
+        text-overflow: ellipsis;
+        min-width: 0;
         font-weight: 300;
-    }
+        font-size: 1.4rem;
+        }
+
     .price {
+        font-size: 1.4rem;
         font-weight: 500;
-        animation: slide-off 400ms both;
     }
 
     &:hover {
-
-        .price {
-            animation: slide-on 400ms both;
-        }
         .check {
             animation: slide-on 400ms both;
         }    
         .fa-check-circle {
             animation: rotation 400ms forwards;
-        }
-        
+        }      
     }
     
     .check {
         height: 68px;
-        width: 60px;
+        width: 0px;
         background-color: $color-tertiary;
         border-radius: 0px 15px 15px 0px;
-        position: absolute;
-        left: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -170,9 +157,20 @@ opacity: 0;
     
         }
     }
+
+    &:nth-child(1){
+        animation: appearance 1s 2700ms forwards;
+      }
+    &:nth-child(2){
+        animation: appearance 1s 2900ms forwards;
+      }
+    &:nth-child(3){
+        animation: appearance 1s 3100ms forwards;
+      }
+    &:nth-child(4){
+        animation: appearance 1s 3300ms forwards;
+      }
 }
-
-
 
 .menu__starters, .menu__main-dishes, .menu__desserts {
 margin-bottom: 35px;
@@ -182,10 +180,3 @@ margin-bottom: 35px;
 margin-bottom: 50px;
 }
 
-
-.comment {
-white-space: nowrap; 
-overflow: hidden;
-text-overflow: ellipsis;
-min-width: 0;
-}
